--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,12 @@ body{
     height: 100%;
 }
 
+*{
+    margin:0;
+    padding: 0
+}
+
+
 body{
     background: var(--color-lightgray);
     font-family: var(--ff-base);
@@ -29,12 +35,14 @@ div{
     padding:1rem;
     border-radius: 1rem;
     text-align: center;
+    box-shadow: 0 1rem 1rem lightgray;
 }
 
 h2{
     color: var(--color-darkblue);
     font-weight: var(--fw-700);
     font-size: 1.5rem;
+    margin-top:.25rem;
 }
 
 img {
@@ -43,6 +51,7 @@ img {
 }
 
 p {
+    margin-top: 1rem;
     color: var(--color-grayishblue);
     font-weight: var(--fw-400);
     font-size: 1rem;
