--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ body{
 div{
     background: var(--color-white);
     width: 18rem;
-    padding:1rem;
+    padding:1.5rem;
     border-radius: 1rem;
     text-align: center;
     box-shadow: 0 1rem 1rem lightgray;
@@ -42,7 +42,7 @@ h2{
     color: var(--color-darkblue);
     font-weight: var(--fw-700);
     font-size: 1.5rem;
-    margin-top:.25rem;
+    margin-top: 1rem;
 }
 
 img {
